Another huge update. A bunch of unused config options removed. Fishing records are now separated into current competition and all time. Enchantment, Potion Effect, and McMMO conditions reworked to accept multiple entries. I set my IDE's formatting back to default to fix some issues I kept having. So far so good.